--- a/red_coffee.html
+++ b/red_coffee.html
@@ -30,5 +30,12 @@
             </div>
         </div>
     </header>
+
+    <section>
+        <div class="coffee">
+            <p>WHAT COFFEE IS BEST FOR YOU?</p>
+        </div>
+        <div class="query"><p>Learn the Science behind Roasting</p></div>
+    </section>
 </body>
 </html>
