--- a/red_coffee.html
+++ b/red_coffee.html
@@ -36,6 +36,22 @@
             <p>WHAT COFFEE IS BEST FOR YOU?</p>
         </div>
         <div class="query"><p>Learn the Science behind Roasting</p></div>
+        <div class="cont">
+            <div><img src="coffee-icon-png-13667.png" alt="">
+                 <img src="coffee-bean-icon.png" alt="">
+                 <img src="Coffee Bean Icon.svg" alt="">
+            </div>
+            <div class="roast"><p>LIGHT ROAST</p>
+            <p style="padding-left: 15.5vw;">MEDIUM ROAST</p>
+             <p style="padding-left: 16vw;">DARK ROAST</p>
+            </div>
+            <div>
+                <div class="border"></div>
+                <div class="bord"></div>
+                <div class="bords"></div>
+            </div>
+            <div class="where"></div>
+        </div>
     </section>
 </body>
 </html>
