--- a/red_coffee.html
+++ b/red_coffee.html
@@ -50,7 +50,12 @@
                 <div class="bord"></div>
                 <div class="bords"></div>
             </div>
-            <div class="where"></div>
+
+            <div class="where"><p>196'C - 205'C</p>
+             <p style="padding-left:20vw;">210'C - 219'C</p>
+             <p style="padding-left:20vw;">225'C - 245'C</p>
+            </div>
+            <div class="whym"><p>Lorem ipsum, dolor sit amet consectetur <br> adipisicing elit. Officia soluta tenetur aut inventore <br> dignissimos cumque delectus optio aliquam maiores </p></div>
         </div>
     </section>
 </body>
