--- a/red_coffee.html
+++ b/red_coffee.html
@@ -38,7 +38,7 @@
         <div class="query"><p>Learn the Science behind Roasting</p></div>
         <div class="cont">
             <div><img src="coffee-icon-png-13667.png" alt="">
-                 <img src="coffee-bean-icon.png" alt="">
+                 <img  src="coffee-bean-icon.png" alt="">
                  <img src="Coffee Bean Icon.svg" alt="">
             </div>
             <div class="roast"><p>LIGHT ROAST</p>
@@ -55,7 +55,10 @@
              <p style="padding-left:20vw;">210'C - 219'C</p>
              <p style="padding-left:20vw;">225'C - 245'C</p>
             </div>
-            <div class="whym"><p>Lorem ipsum, dolor sit amet consectetur <br> adipisicing elit. Officia soluta tenetur aut inventore <br> dignissimos cumque delectus optio aliquam maiores </p></div>
+            <div class="whym"><p  style="margin-left: 14vw;">Lorem ipsum, dolor sit amet consectetur <br> adipisicing elit. Officia soluta tenetur <br> dignissimos cumque delectus optio aliquam  </p>
+              <p style="margin-left: 7vw;">Lorem ipsum, dolor sit amet consectetur <br> adipisicing elit. Officia soluta tenetur <br> dignissimos cumque delectus optio aliquam </p>
+              <p style="margin-left: 9vw;">Lorem ipsum, dolor sit amet consectetur <br> adipisicing elit. Officia soluta tenetur <br> dignissimos cumque delectus optio aliquam </p>
+            </div>
         </div>
     </section>
 </body>
