--- a/red_coffee.html
+++ b/red_coffee.html
@@ -17,7 +17,7 @@
                 <div class="dropdown">
                     <a class="nav_link">SERVICES</a>
                     <div class="dropdown-content">
-                      <a href="#">SDU STORE</a>
+                      <a href="sdustore.html">SDU STORE</a>
                       <a href="#">RED COFFEE</a>
                       <a href="#">BELKA FOOD</a>
                     </div>
