--- a/sdustore.html
+++ b/sdustore.html
@@ -31,7 +31,13 @@
   <img src="https://a.lmcdn.ru/bs2/5/55/qazaq_republic_45332523.jpg" class="imgintro1" alt="">
 </div>
 
-
+<div class="qr">
+  <h1>QAZAQ REPUBLIC</h1>
+</div>
+<div class="collabs">
+  <img class="colabsss" src="img/pngegg (2).png">
+  <img class="collab" src="https://images.squarespace-cdn.com/content/v1/597a3775d7bdce9762a21135/1503076549606-TBLNR5ZK1ADNKKZ0LO5B/collab+logo.png?format=1500w" alt="">
+</div>
 <div class="images2">
   <img src="img/IMG_2143.JPG" class="imgintro2" alt="">
 </div>
