--- a/sdustore.html
+++ b/sdustore.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="isa.css">
-    <title>Korzina</title>
+    <title>SDUshop</title>
 </head>
 <body style="margin: 0;">
 
@@ -15,7 +15,14 @@
             <div class="header_logo">SDUshop</div>
           <nav class="nav">
             <a class="nav_link" href="Home.html">Home</a>
-            <a class="nav_link" href="index.html">SERVICE</a>
+            <div class="dropdown">
+              <a class="nav_link">SERVICES</a>
+              <div class="dropdown-content">
+                <a href="sdustore.html">SDU STORE</a>
+                <a href="red_coffee.html">RED COFFEE</a>
+                <a href="#">BELKA FOOD</a>
+              </div>
+            </div>
             <a  class="nav_link" href="#">WORK</a>
             <a  class="nav_link" href="#">MORE</a>
             <a  class="nav_link" href="#">CONTACTS</a>
@@ -38,11 +45,16 @@
   <img class="colabsss" src="img/pngegg (2).png">
   <img class="collab" src="https://images.squarespace-cdn.com/content/v1/597a3775d7bdce9762a21135/1503076549606-TBLNR5ZK1ADNKKZ0LO5B/collab+logo.png?format=1500w" alt="">
 </div>
+
+<div class="sdustore">
+  <h1><span>SDU</span> store</h1>
+</div>
+</br>
 <div class="images2">
   <img src="img/IMG_2143.JPG" class="imgintro2" alt="">
 </div>
 
-
+</br></br></br>
 <div class="animates">   
     <div class="main">
     <div class="product-item">
