--- a/red_coffee.html
+++ b/red_coffee.html
@@ -71,10 +71,10 @@
             <div class="main">
             <div class="product-item">
                 <div class="product-port" data-id="01">
-                <img class="product-img" src="img/beigeshopper.jpg">
+                <img class="product-img" src="https://st3.depositphotos.com/8687452/16595/i/450/depositphotos_165950996-stock-photo-mochi-ice-cream.jpg">
                 <div class="product-list">
-                  <h3 class="item-title">Espresso</h3>
-                    <span class="price__currency"> 7500 tg</span>
+                  <h3 class="item-title">Mochi</h3>
+                    <span class="price__currency">990 tg</span>
                     <div class="colss">
                         <button data-action="minus">-</button>&nbsp; <div class="kol" data-counter>1</div>&nbsp; <button data-action="plus">+</button>
                     </div>
@@ -187,7 +187,7 @@
                 <label><input type="radio" name="r"><span>0.5L</span></label>
                 <label><input type="radio" name="r"><span>0.7L</span></label>
               </div>
-                <span class="price__currency"> 17900 tg</span>
+                <span class="price__currency"> 1100 tg</span>
                 <div class="colss">
                     <button data-action="minus">-</button>&nbsp; <div class="kol" data-counter>1</div>&nbsp; <button data-action="plus">+</button>
                 </div>
@@ -207,7 +207,7 @@
                     <label><input type="radio" name="r"><span>0.5L</span></label>
                     <label><input type="radio" name="r"><span>0.7L</span></label>
                   </div>
-                    <span class="price__currency"> 17900 tg</span>
+                    <span class="price__currency"> 1300 tg</span>
                     <div class="colss">
                         <button data-action="minus">-</button>&nbsp; <div data-counter>1</div>&nbsp; <button data-action="plus">+</button>
                     </div>
@@ -230,7 +230,7 @@
                 <label><input type="radio" name="r"><span>0.5L</span></label>
                 <label><input type="radio" name="r"><span>0.7L</span></label>
               </div>
-                <span class="price__currency"> 17900 tg</span>
+                <span class="price__currency"> 1500 tg</span>
                 <div class="colss">
                     <button data-action="minus">-</button>&nbsp; <div  data-counter>1</div>&nbsp; <button data-action="plus">+</button>
                 </div>
@@ -251,7 +251,7 @@
                   <label><input type="radio" name="r"><span>0.5L</span></label>
                   <label><input type="radio" name="r"><span>0.7L</span></label>
                 </div>
-                  <span class="price__currency"> 17900 tg</span>
+                  <span class="price__currency"> 790 tg</span>
                   <div class="colss">
                       <button data-action="minus">-</button>&nbsp; <div class="kol" data-counter>1</div>&nbsp; <button data-action="plus">+</button>
                   </div>
@@ -280,7 +280,7 @@
                         <label><input type="radio" name="r"><span>0.5L</span></label>
                         <label><input type="radio" name="r"><span>0.7L</span></label>
                       </div>
-                        <span class="price__currency"> 19900 tg</span>
+                        <span class="price__currency"> 990 tg</span>
                         <div class="colss">
                             <button data-action="minus">-</button>&nbsp; <div data-counter>1</div>&nbsp; <button data-action="plus">+</button>
                         </div>
@@ -303,7 +303,7 @@
                     <label><input type="radio" name="r"><span>0.5L</span></label>
                     <label><input type="radio" name="r"><span>0.7L</span></label>
                   </div>
-                    <span class="price__currency"> 19900 tg</span>
+                    <span class="price__currency"> 690 tg</span>
                     <div class="colss">
                         <button data-action="minus">-</button>&nbsp; <div  data-counter>1</div>&nbsp; <button data-action="plus">+</button>
                     </div>
@@ -323,7 +323,7 @@
                   <label><input type="radio" name="r"><span>0.5L</span></label>
                   <label><input type="radio" name="r"><span>0.7L</span></label>
                 </div>
-                  <span class="price__currency"> 19900 tg</span>
+                  <span class="price__currency"> 590 tg</span>
                   <div class="colss">
                       <button data-action="minus">-</button>&nbsp; <div  data-counter>1</div>&nbsp; <button data-action="plus">+</button>
                   </div>
@@ -344,7 +344,7 @@
                 <label><input type="radio" name="r"><span>0.5L</span></label>
                 <label><input type="radio" name="r"><span>0.7L</span></label>
               </div>
-                <span class="price__currency"> 19900 tg</span>
+                <span class="price__currency"> 890 tg</span>
                 <div class="colss">
                     <button data-action="minus">-</button>&nbsp; <div  data-counter>1</div>&nbsp; <button data-action="plus">+</button>
                 </div>
@@ -372,7 +372,7 @@
                                 <label><input type="radio" name="r"><span>0.5L</span></label>
                                 <label><input type="radio" name="r"><span>0.7L</span></label>
                               </div>
-                                <span class="price__currency"> 9900 tg</span>
+                                <span class="price__currency"> 990 tg</span>
                                 <div class="colss">
                                     <button data-action="minus">-</button>&nbsp; <div data-counter>1</div>&nbsp; <button data-action="plus">+</button>
                                 </div>
@@ -395,7 +395,7 @@
                             <label><input type="radio" name="r"><span>0.5L</span></label>
                             <label><input type="radio" name="r"><span>0.7L</span></label>
                           </div>
-                            <span class="price__currency"> 9900 tg</span>
+                            <span class="price__currency"> 790 tg</span>
                             <div class="colss">
                                 <button data-action="minus">-</button>&nbsp; <div  data-counter>1</div>&nbsp; <button data-action="plus">+</button>
                             </div>
@@ -415,7 +415,7 @@
                           <label><input type="radio" name="r"><span>0.5L</span></label>
                           <label><input type="radio" name="r"><span>0.7L</span></label>
                         </div>
-                          <span class="price__currency"> 9900 tg</span>
+                          <span class="price__currency"> 590 tg</span>
                           <div class="colss">
                               <button data-action="minus">-</button>&nbsp; <div  data-counter>1</div>&nbsp; <button data-action="plus">+</button>
                           </div>
@@ -436,7 +436,7 @@
                         <label><input type="radio" name="r"><span>0.5L</span></label>
                         <label><input type="radio" name="r"><span>0.7L</span></label>
                       </div>
-                        <span class="price__currency"> 9900 tg</span>
+                        <span class="price__currency"> 790 tg</span>
                         <div class="colss">
                             <button data-action="minus">-</button>&nbsp; <div  data-counter>1</div>&nbsp; <button data-action="plus">+</button>
                         </div>
@@ -455,9 +455,9 @@
         </div>
             
               <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-              <script src="js/calCartPrice.js"></script>  
-              <script src="js/toggleCartStatus.js"></script>
-              <script src="js/counter.js"></script>
-              <script src="js/cart.js"></script>
+              <script src="jss/calCartPrice1.js"></script>  
+              <script src="jss/toggleCartStatus1.js"></script>
+              <script src="jss/counter1.js"></script>
+              <script src="jss/cart1.js"></script>
 </body>
 </html>
