--- a/sdustore.html
+++ b/sdustore.html
@@ -34,6 +34,7 @@
 <img src="image_2022-12-08_09-47-04.png" alt="" class="imgintro">
 </div>
 
+<div class="animatess">
 <div class="images">
   <img src="https://a.lmcdn.ru/bs2/5/55/qazaq_republic_45332523.jpg" class="imgintro1" alt="">
 </div>
@@ -42,8 +43,7 @@
   <h1>QAZAQ REPUBLIC</h1>
 </div>
 <div class="collabs">
-  <img class="colabsss" src="img/pngegg (2).png">
-  <img class="collab" src="https://images.squarespace-cdn.com/content/v1/597a3775d7bdce9762a21135/1503076549606-TBLNR5ZK1ADNKKZ0LO5B/collab+logo.png?format=1500w" alt="">
+  <img class="collab" src="https://images.squarespace-cdn.com/content/v1/597a3775d7bdce9762a21135/1503076549606-TBLNR5ZK1ADNKKZ0LO5B/collab+logo.png" alt="">
 </div>
 
 <div class="sdustore">
@@ -53,8 +53,7 @@
 <div class="images2">
   <img src="img/IMG_2143.JPG" class="imgintro2" alt="">
 </div>
-
-</br></br></br>
+</div>
 <div class="animates">   
     <div class="main">
     <div class="product-item">
