--- a/belkafood.html
+++ b/belkafood.html
@@ -274,9 +274,9 @@
 </div>
     
       <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-      <script src="calCartPrice.js"></script>  
-      <script src="toggleCartStatus.js"></script>
-      <script src="counter.js"></script>
-      <script src="cart.js"></script>
+      <script src="jss3/calCartPrice2.js"></script>  
+      <script src="jss3/toggleCartStatus2.js"></script>
+      <script src="jss3/counter2.js"></script>
+      <script src="jss3/cart.js"></script>
 </body>
 </html>
