--- a/belkafood.html
+++ b/belkafood.html
@@ -23,9 +23,10 @@
         </div>
     </div>
 </header>
-<div class="intro">
-<img src="img/belka.JPG" alt="" class="imgintro">
-</div>
+<!-- <div class="intro"> -->
+  <p class="aligncenter">
+<img src="img/belka.JPG" alt="" class="imgintro"></p>
+<!-- </div> -->
 
 <div class="animates">   
     <div class="main">
