sdushop change text

--- a/sdustore.html
+++ b/sdustore.html
@@ -40,7 +40,7 @@
 </div>
 
 <div class="qr">
-  <h1>QAZAQ REPUBLIC</h1>
+  <h1 class="spacing">QAZAQ REPUBLIC <span class="xxxx">XXX</span>    <h1 class="colortext">SDU</h1></h1>
 </div>
 <div class="collabs">
   <img class="collab" src="https://images.squarespace-cdn.com/content/v1/597a3775d7bdce9762a21135/1503076549606-TBLNR5ZK1ADNKKZ0LO5B/collab+logo.png" alt="">
