--- a/about_us.html
+++ b/about_us.html
@@ -1,1 +1,42 @@
-html
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="about_us.css">
+</head>
+<body>
+    <header class="header">
+        <div class="container">
+            <div class="header_inner">
+                <div class="header_logo">ABOUT US</div>
+              <nav class="nav">
+                <a class="nav_link" href="#">HOME</a>
+                <div class="dropdown">
+                    <a class="nav_link">SERVICES</a>
+                    <div class="dropdown-content">
+                      <a href="sdustore.html">SDU STORE</a>
+                      <a href="./red_coffee.html">RED COFFEE</a>
+                      <a href="./belkafood.html">BELKA FOOD</a>
+                    </div>
+                  </div>
+                <a  class="nav_link" href="#">WORK</a>
+                <a  class="nav_link" href="./contacts.html">CONTACTS</a>
+                <a  class="nav_link" href="#">MORE</a>
+                
+              </nav>    
+            </div>
+        </div>
+    </header>
+    <div class="intro">
+        <div class="container">
+            <div class="intro_inner">
+                <h2 class="intro_sutitle">About Us</h2>
+            <a href="./home.html" class="intro_title"> HOME</a>
+        </div>
+        </div>
+       </div>
+</body>
+</html>
