--- a/red_coffee.html
+++ b/red_coffee.html
@@ -23,7 +23,7 @@
                     </div>
                   </div>
                 <a  class="nav_link" href="#">WORK</a>
-                <a  class="nav_link" href="#">CONTACTS</a>
+                <a  class="nav_link" href="./contacts.html">CONTACTS</a>
                 <a  class="nav_link" href="#">MORE</a>
               
               </nav>    
