--- a/learn_more.html
+++ b/learn_more.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="about_us.css">
+    <link rel="stylesheet" href="learn_more.css">
 </head>
 <body>
     <header class="header">
         <div class="container">
             <div class="header_inner">
-                <div class="header_logo">ABOUT US</div>
+                <div class="header_logo">SDUshop</div>
               <nav class="nav">
                 <a class="nav_link" href="#">HOME</a>
                 <div class="dropdown">
@@ -33,10 +33,23 @@
     <div class="intro">
         <div class="container">
             <div class="intro_inner">
-                <h2 class="intro_sutitle">About Us</h2>
+                <h2 class="intro_sutitle">Learn More</h2>
             <a href="./home.html" class="intro_title"> HOME</a>
         </div>
         </div>
        </div>
+
+        <section class="cmd">
+             <p class="nike">Since 2022, we have been providing our customers with good products and we have the <br> best choice. You can rely on our desire to have good things at hand. <br> We undertake all the work of selecting your next orders with our carefully planned packages.</p>
+             <p class="adidas">We work with world's best  brands such as Qazaq Republic, SDU, Belka Food, Sdu Store, Red Coffee. And we offer the <br> best of them. We guess you will like and rate our commitment.</p>
+            <div class="puma">
+                <img class="suret" src="https://roadmunk.com/guides/content/images/2018/12/prioritization-ch2-1.svg" alt="">
+            <p class="touch">Where did we get the idea from?</p>
+            
+            </div>
+            <p class="idea">This idea appeared back in 2021, then we thought <br> that SDU stores should have their own websites so <br> that other people could order, and we wanted all people to <br> know which stores are in SDU.</p>
+            </section>
+
+
 </body>
 </html>
