--- a/contacts.html
+++ b/contacts.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
     <link rel="stylesheet" href="contacts.css"
-    <title></title>
+    <title>SDUshop</title>
 </head>
 <body>
 <header class="header">
