--- a/learn_more.html
+++ b/learn_more.html
@@ -44,11 +44,20 @@
              <p class="adidas">We work with world's best  brands such as Qazaq Republic, SDU, Belka Food, Sdu Store, Red Coffee. And we offer the <br> best of them. We guess you will like and rate our commitment.</p>
             <div class="puma">
                 <img class="suret" src="https://roadmunk.com/guides/content/images/2018/12/prioritization-ch2-1.svg" alt="">
-            <p class="touch">Where did we get the idea from?</p>
+            <b class="touch">Where did we get the idea from?</b>
             
             </div>
             <p class="idea">This idea appeared back in 2021, then we thought <br> that SDU stores should have their own websites so <br> that other people could order, and we wanted all people to <br> know which stores are in SDU.</p>
-            </section>
+           <div class="developed">
+            <b class="devel">Developed</b>
+            <img class="img" src="https://cdn-icons-png.flaticon.com/512/4508/4508029.png" alt="">  
+           </div>
+           <p  class="current">When we opened our points, we focused on SDU. Currently, <br> we plan to deploy our points in every city of Kazakhstan.Its successor, <br> officially opened in 2022. Our stores are still the best store in our region.</p>
+            <div class="end">
+              <img class="photo" src="best-1364.png" alt="">
+            <b class="best">The Best</b>
+            </div>
+          </section>
 
 
 </body>
