--- a/AboutUs.html
+++ b/AboutUs.html
@@ -34,8 +34,76 @@
     </div>
     </div>
    </div>
+<section class="isakisa">
+<div class="team_members">
+    <p id="team_members_text">team members</p>
+    <hr>
+    <h1 id="team_members_h1">Meet Our Team</h1>
+    <div class="team_members_people">
+        <div class="people_1">
+            <img id="people_1_image" src="img/messi.jpg" alt="people_1" width="280px">
+            <p id="people_1_name">Ankara Messi</p>
+            <p id="people_1_profession">General Director</p>
+        </div>
+        <div class="people_2">
+            <img id="people_2_image" src="img/nurai.jpg" alt="people_2" width="280px" height="348px">
+            <p id="people_2_name">Nurai Zhumabai</p>
+            <p id="people_2_profession">Member</p>
+        </div>
+        <div class="people_3">
+            <img id="people_3_image" src="img/islam7.jpg" alt="people_3" width="280px">
+            <p id="people_3_name">Islam Tungishbay</p>
+            <p id="people_3_profession">Member</p>
+        </div>
+        <div class="people_4">
+            <img id="people_4_image" src="img/erbol2.jpg" alt="people_4" width="280px" height="348px">
+            <p id="people_4_name">Yerbol Ryskulbek</p>
+            <p id="people_4_profession">Member</p>
+        </div>
+    </div>
+</div>
+</div>
+</div>
+</section>
 
+<div class="footer">
+    <div class="logo_footer">
+        <div class="logo_image_footer">
+        <a><img src="https://upload.wikimedia.org/wikipedia/commons/c/cb/Logo_of_Suleymen_Demirel_University%2C_Kazakhstan.png" alt="logo_image" width="100px"></a>
+    </div>
+    <!-- <div class="logo_text_footer">
+        <h1><a>DARME</a></h1>
+        <p><a>Better With Us</a></p>
+    </div> -->
+    </div>
 
-   
+    <div class="column_1_footer">
+        <a href="Home.html" style="text-decoration: none; color: #F0F0F0"><div>Home</div></a>
+        <a href="Electronics.html" style="text-decoration: none; color: #F0F0F0"><div>About us</div></a>
+        <a href="Mobile_Phones.html" style="text-decoration: none; color: #F0F0F0;"><div>More</div></a>
+        <a href="Laptops.html" style="text-decoration: none; color: #F0F0F0;"><div>Contacts</div></a>
+    </div>
+
+    <div class="column_2_footer">
+        <div id="darme_footer">SERVICES</div>
+        <a href="About_Us.html" style="text-decoration: none; color: #F0F0F0;"><div>SDU store</div></a>
+        <a href="Contact_Us.html" style="text-decoration: none; color: #F0F0F0;"><div>Belka Food</div></a>
+        <a href="Feedback.html" style="text-decoration: none; color: #F0F0F0;"><div>Red Coffee</div></a>
+    </div>
+
+    <div class="column_3_footer">
+        <div class="column_3_div12">address</div>
+        <p>Almaty, Kazakhstan</p>
+        <div class="column_3_div12">phone</div>
+        <p>+7 771 973 49 69</p>
+        <div class="column_3_div12">email</div>
+        <p>tungishbay04.gmail.com</p>
+    </div>
+
+    <div class="copyright_footer">
+        <div>© 2022 SDUshop <a href="#" style="text-decoration: none;">Privacy Policy</a></div>
+    </div>
+</div>
+
 </body>
 </html>
