--- a/belkafood.html
+++ b/belkafood.html
@@ -23,10 +23,10 @@
         </div>
     </div>
 </header>
-<!-- <div class="intro"> -->
-  <p class="aligncenter">
-<img src="img/belka.JPG" alt="" class="imgintro"></p>
-<!-- </div> -->
+<div class="intro">
+  <!-- <p class="aligncenter"> -->
+<img src="img/belka.JPG" alt="" class="imgintro">
+</div>
 
 <div class="animates">   
     <div class="main">
