--- a/belkafood.html
+++ b/belkafood.html
@@ -25,7 +25,7 @@
 </header>
 <div class="intro">
   <!-- <p class="aligncenter"> -->
-<img src="img/belka.JPG" alt="" class="imgintro">
+<img src="belka.JPG" alt="" width="1200px" height="700px">
 </div>
 
 <div class="animates">   
