--- a/red_coffee.html
+++ b/red_coffee.html
@@ -19,7 +19,7 @@
                     <div class="dropdown-content">
                       <a href="sdustore.html">SDU STORE</a>
                       <a href="#">RED COFFEE</a>
-                      <a href="#">BELKA FOOD</a>
+                      <a href="belkafood.html">BELKA FOOD</a>
                     </div>
                   </div>
                 <a  class="nav_link" href="#">WORK</a>
