--- a/contacts.html
+++ b/contacts.html
@@ -19,7 +19,7 @@
                     <!-- <a href="https://sdu.edu.kz/">SDU</a> -->
                 </div>
               <nav class="nav">
-                <a class="nav_link" href="#">ABOUT US</a>
+                <a class="nav_link" href="AboutUs.html">ABOUT US</a>
                 <a class="nav_link" href="index.html">SERVICE</a>
                 <a  class="nav_link" href="#">WORK</a>
                 <a  class="nav_link" href="contacts.html">CONTACTS</a>
