--- a/sdustore.html
+++ b/sdustore.html
@@ -20,7 +20,7 @@
               <div class="dropdown-content">
                 <a href="sdustore.html">SDU STORE</a>
                 <a href="red_coffee.html">RED COFFEE</a>
-                <a href="#">BELKA FOOD</a>
+                <a href="belkafood.html">BELKA FOOD</a>
               </div>
             </div>
             <a  class="nav_link" href="#">WORK</a>
