--- a/red_coffee.html
+++ b/red_coffee.html
@@ -18,7 +18,7 @@
                     <a class="nav_link">SERVICES</a>
                     <div class="dropdown-content">
                       <a href="sdustore.html">SDU STORE</a>
-                      <a href="#">RED COFFEE</a>
+                      <a href="red_coffee.html">RED COFFEE</a>
                       <a href="belkafood.html">BELKA FOOD</a>
                     </div>
                   </div>
