--- a/learn_more.html
+++ b/learn_more.html
@@ -53,9 +53,9 @@
             <img class="img" src="https://cdn-icons-png.flaticon.com/512/4508/4508029.png" alt="">  
            </div>
            <p  class="current">When we opened our points, we focused on SDU. Currently, <br> we plan to deploy our points in every city of Kazakhstan.Its successor, <br> officially opened in 2022. Our stores are still the best store in our region.</p>
-            <div class="developed">
-              <img style="margin-left:11vw;" class="img" src="https://cdn-icons-png.flaticon.com/512/4508/4508029.png" alt="">
-              <b style="margin-left: 10vw;" class="devel">The Best</b>
+            <div class="zaq">
+              <img class="cucu" src="https://cdn-icons-png.flaticon.com/512/4508/4508029.png" alt="">
+              <b class="develo">The Best</b>
                 
              </div>
              <p class="class">When we opened our points, we focused on SDU. Currently, <br> we plan to deploy our points in every city of Kazakhstan.Its successor, <br> officially opened in 2022. Our stores are still the best store in our region.</p>
