--- a/learn_more.html
+++ b/learn_more.html
@@ -98,11 +98,11 @@
                   <div class="column_3_div12">phone</div>
                   <p>+7 776 344 43 69</p>
                   <div class="column_3_div12">email</div>
-                  <p>yerbolryskulbek4@gmail.com</p>
+                  <p class="gmail">yerbolryskulbek4@gmail.com</p>
               </div>
           
               <div class="copyright_footer">
-                  <div>© 2022 SDUshop <a href="#" style="text-decoration: none;">Privacy Policy</a></div>
+                  <div class="hoodie">© 2022 SDUshop <a href="#" style="text-decoration: none;">Privacy Policy</a></div>
               </div>
           </div>
 
