--- a/learn_more.html
+++ b/learn_more.html
@@ -54,7 +54,7 @@
            </div>
            <p  class="current">When we opened our points, we focused on SDU. Currently, <br> we plan to deploy our points in every city of Kazakhstan.Its successor, <br> officially opened in 2022. Our stores are still the best store in our region.</p>
             <div class="zaq">
-              <img class="cucu" src="https://cdn-icons-png.flaticon.com/512/4508/4508029.png" alt="">
+              <img class="cucu" src="img\messi.jpg" alt="">
               <b class="develo">The Best</b>
                 
              </div>
