--- a/red_coffee.html
+++ b/red_coffee.html
@@ -31,7 +31,7 @@
         </div>
     </header>
 
-    <section>
+    <section class="club">
         <div class="coffee">
             <p>WHAT COFFEE IS BEST FOR YOU?</p>
         </div>
