--- a/AboutUs.html
+++ b/AboutUs.html
@@ -13,15 +13,26 @@
 </head>
 <body>
 <header class="header">
+    <div class="navs">
+        <label class="togglesss" for="toggle">&#9776;</label>
+      </div>
+      <input type="checkbox" name="" id="toggle">
         <div class="container">
             <div class="header_inner">
                 <div class="header_logo">SDUshop</div>
               <nav class="nav">
-                <a class="nav_link" href="#">ABOUT US</a>
-                <a class="nav_link" href="index.html">SERVICE</a>
-                <a  class="nav_link" href="#">WORK</a>
-                <a  class="nav_link" href="contacts.html">CONTACTS</a>
-                <a  class="nav_link" href="#">MORE</a>
+                <a class="nav_link" href="#">HOME</a>
+                <div class="dropdown">
+                    <a class="nav_link">SERVICES</a>
+                    <div class="dropdown-content">
+                      <a href="sdustore.html">SDU STORE</a>
+                      <a href="red_coffee.html">RED COFFEE</a>
+                      <a href="belkafood.html">BELKA FOOD</a>
+                    </div>
+                  </div>
+                <a  class="nav_link" href="#">ABOUT US</a>
+                <a  class="nav_link" href="contacts.html">MORE</a>
+                <a  class="nav_link" href="#">CONTACTS</a>
               </nav>    
             </div>
         </div>
