--- a/red_coffee.html
+++ b/red_coffee.html
@@ -36,13 +36,13 @@
         </div>
         <div class="query"><p>Learn the Science behind Roasting</p></div>
         <div class="cont">
-            <div><img src="coffee-icon-png-13667.png" alt="">
-                 <img  src="coffee-bean-icon.png" alt="">
-                 <img src="Coffee Bean Icon.svg" alt="">
+            <div><img class="icon" src="coffee-icon-png-13667.png" alt="">
+                 <img class="dear"  src="coffee-bean-icon.png" alt="">
+                 <img class="teach" src="Coffee Bean Icon.svg" alt="">
             </div>
-            <div class="roast"><p>LIGHT ROAST</p>
-            <p style="padding-left: 15.5vw;">MEDIUM ROAST</p>
-             <p style="padding-left: 16vw;">DARK ROAST</p>
+            <div class="roast"><p class="light">LIGHT ROAST</p>
+            <p class="medium" style="padding-left: 15.5vw;">MEDIUM ROAST</p>
+             <p class="dark" style="padding-left: 16vw;">DARK ROAST</p>
             </div>
             <div>
                 <div class="border"></div>
