red_coffee.html

--- a/red_coffee.html
+++ b/red_coffee.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>SDUshop</title>
      <link rel="stylesheet" href="red_coffee.css">
 </head>
 <body>
@@ -50,13 +50,13 @@
                 <div class="bords"></div>
             </div>
 
-            <div class="where"><p>196'C - 205'C</p>
-             <p style="padding-left:20vw;">210'C - 219'C</p>
-             <p style="padding-left:20vw;">225'C - 245'C</p>
+            <div class="where"><p class="sad">196'C - 205'C</p>
+             <p class="padd" style="padding-left:20vw;">210'C - 219'C</p>
+             <p class="add" style="padding-left:20vw;">225'C - 245'C</p>
             </div>
-            <div class="whym"><p  style="margin-left: 14vw;">Lorem ipsum, dolor sit amet consectetur <br> adipisicing elit. Officia soluta tenetur <br> dignissimos cumque delectus optio aliquam  </p>
-              <p style="margin-left: 7vw;">Lorem ipsum, dolor sit amet consectetur <br> adipisicing elit. Officia soluta tenetur <br> dignissimos cumque delectus optio aliquam </p>
-              <p style="margin-left: 9vw;">Lorem ipsum, dolor sit amet consectetur <br> adipisicing elit. Officia soluta tenetur <br> dignissimos cumque delectus optio aliquam </p>
+            <div class="whym"><p class="wc" style="margin-left: 14vw;">Lorem ipsum, dolor sit amet consectetur <br> adipisicing elit. Officia soluta tenetur <br> dignissimos cumque delectus optio aliquam  </p>
+              <p class="cf" style="margin-left: 7vw;">Lorem ipsum, dolor sit amet consectetur <br> adipisicing elit. Officia soluta tenetur <br> dignissimos cumque delectus optio aliquam </p>
+              <p class="fc" style="margin-left: 9vw;">Lorem ipsum, dolor sit amet consectetur <br> adipisicing elit. Officia soluta tenetur <br> dignissimos cumque delectus optio aliquam </p>
             </div>
         </div>
     </section>
@@ -392,9 +392,9 @@
       
           <div class="column_1_footer">
               <a href="Home.html" style="text-decoration: none; color: #F0F0F0"><div>Home</div></a>
-              <a href="Electronics.html" style="text-decoration: none; color: #F0F0F0"><div>About us</div></a>
-              <a href="Mobile_Phones.html" style="text-decoration: none; color: #F0F0F0;"><div>More</div></a>
-              <a href="Laptops.html" style="text-decoration: none; color: #F0F0F0;"><div>Contacts</div></a>
+              <a href="./AboutUs.html" style="text-decoration: none; color: #F0F0F0"><div>About us</div></a>
+              <a href="./learn_more.html" style="text-decoration: none; color: #F0F0F0;"><div>More</div></a>
+              <a href="./contacts.html" style="text-decoration: none; color: #F0F0F0;"><div>Contacts</div></a>
           </div>
       
           <div class="column_2_footer">
