--- a/contacts.html
+++ b/contacts.html
@@ -9,14 +9,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
     <link rel="stylesheet" href="contacts.css"
-    <title>SDUshop</title>
+    <title></title>
 </head>
 <body>
 <header class="header">
         <div class="container">
             <div class="header_inner">
                 <div class="header_logo">
-                    <!-- <a href="https://sdu.edu.kz/">SDU</a> -->
+                    SDUshop
                 </div>
               <nav class="nav">
                 <a class="nav_link" href="AboutUs.html">ABOUT US</a>
