--- a/red_coffee.html
+++ b/red_coffee.html
@@ -75,7 +75,7 @@
                   <h3 class="item-title">Mochi</h3>
                     <span class="price__currency">990 tg</span>
                     <div class="colss">
-                        <button data-action="minus">-</button>&nbsp; <div class="kol" data-counter>1</div>&nbsp; <button data-action="plus">+</button>
+                        <button data-action="minus">-</button>&nbsp; <div class="kol" data-counter>1</div>&nbsp; <button class="plus" data-action="plus">+</button>
                     </div>
                     <a data-cart  class="button">В корзину</a>
                 </div>
