--- a/red_coffee.html
+++ b/red_coffee.html
@@ -13,7 +13,7 @@
         <div class="header_inner">
             <div class="header_logo">SDUshop</div>
           <nav class="nav">
-            <a class="nav_link" href="Home.html">Home</a>
+            <a class="nav_link" href="Home.html">HOME</a>
             <div class="dropdown">
               <a class="nav_link">SERVICES</a>
               <div class="dropdown-content">
@@ -22,7 +22,7 @@
                 <a href="belkafood.html">BELKA FOOD</a>
               </div>
             </div>
-            <a  class="nav_link" href="AboutUs.html">About Us</a>
+            <a  class="nav_link" href="AboutUs.html">ABOUT US</a>
             <a  class="nav_link" href="learn_more.html">MORE</a>
             <a  class="nav_link" href="contacts.html">CONTACTS</a>
           </nav>    
