--- a/belkafood.html
+++ b/belkafood.html
@@ -39,9 +39,9 @@
                 <a href="belkafood.html">BELKA FOOD</a>
               </div>
             </div>
-          <a  class="nav_link" href="./AboutUs.html">WORK</a>
-          <a  class="nav_link" href="./contacts.html">CONTACTS</a>
-          <a  class="nav_link" href="./learn_more.html">MORE</a>
+          <a  class="nav_link" href="./AboutUs.html">ABOUT US</a>
+          <a  class="nav_link" href="./contacts.html">MORE</a>
+          <a  class="nav_link" href="./learn_more.html">CONTACTS</a>
         
         </nav>    
       </div>
